--- a/gasscan/app/src/main/res/layout/activity_gas_scan.xml
+++ b/gasscan/app/src/main/res/layout/activity_gas_scan.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.tanner.gasscan.GasScanActivity">
+    tools:context="com.example.tanner.gasscan.GasScanActivity"
+    android:clickable="true">
 
     <TextView
         android:text="miles"
@@ -41,7 +42,7 @@
         android:layout_below="@+id/textView"
         android:layout_alignStart="@+id/textView" />
 
-    <EditText
+    <TextView
         android:textSize="50dp"
         android:textAlignment="textEnd"
         android:layout_width="wrap_content"
@@ -55,7 +56,7 @@
         android:layout_alignParentStart="false"
         android:clickable="false" />
 
-    <EditText
+    <TextView
         android:textSize="50dp"
         android:textAlignment="textEnd"
         android:layout_width="wrap_content"
@@ -66,7 +67,7 @@
         android:layout_toStartOf="@+id/textView"
         android:clickable="false" />
 
-    <EditText
+    <TextView
         android:textSize="50dp"
         android:textAlignment="textEnd"
         android:layout_width="wrap_content"
@@ -85,10 +86,19 @@
         android:text="Scan Receipt"
         android:id="@+id/Scan"
         android:layout_alignParentBottom="true"
-        android:background="#999900"
+        android:background="#FFC107"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:clickable="true" />
+
+    <ImageButton
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:id="@+id/imageButton"
+        android:background="@drawable/ic_list_black_48dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentEnd="false" />
 
 
 </RelativeLayout>
