--- a/gasscan/app/src/main/res/layout/activity_gas_scan.xml
+++ b/gasscan/app/src/main/res/layout/activity_gas_scan.xml
@@ -101,4 +101,19 @@
         android:layout_alignParentEnd="false" />
 
 
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/navList"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left|start"
+            android:background="#ffeeeeee"/>
+    </android.support.v4.widget.DrawerLayout>
+
 </RelativeLayout>
