--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -129,4 +129,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="31dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test OCR"
+        android:id="@+id/button2"
+        android:layout_alignBottom="@+id/imageButton"
+        android:layout_alignRight="@+id/textView4"
+        android:layout_alignEnd="@+id/textView4" />
+
 </RelativeLayout>
