--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_gravity="left|start"
-            android:background="#ffeeeeee"/>
+            android:background="#fff6f6"/>
     </android.support.v4.widget.DrawerLayout>
 
     <TextView
