--- a/gasscanmk1/app/src/main/res/layout/activity_sign_in.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_sign_in.xml
@@ -24,4 +24,14 @@
         android:visibility="visible"
         android:layout_gravity="center"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign Out"
+        android:id="@+id/sign_out_button"
+        android:layout_gravity="left|bottom"
+        android:background="#b05454"
+        android:clickable="true"
+        android:onClick="signOut"/>
+
 </FrameLayout>
