--- a/gasscanmk1/app/src/main/res/layout/activity_settings.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_settings.xml
@@ -18,4 +18,25 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp"
         android:textSize="70dp"/>
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/Scan"
+        android:layout_alignRight="@+id/Scan"
+        android:layout_alignEnd="@+id/Scan"
+        android:layout_alignTop="@+id/button2">
+
+        <ListView
+            android:id="@+id/navList"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left|start"
+            android:background="#fff6f6"/>
+    </android.support.v4.widget.DrawerLayout>
+
+
 </RelativeLayout>
