--- a/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
@@ -9,6 +9,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="taylorandtanner.gasscanmk1.ViewLogs">
 
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/Scan"
+        android:layout_alignRight="@+id/Scan"
+        android:layout_alignEnd="@+id/Scan"
+        android:layout_alignTop="@+id/button2">
+
+        <ListView
+            android:id="@+id/navList"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left|start"
+            android:background="#fff6f6"/>
+    </android.support.v4.widget.DrawerLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
