--- a/gasscanmk1/app/src/main/res/layout/activity_settings.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_settings.xml
@@ -1,50 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="taylorandtanner.gasscanmk1.Settings"
-    android:clickable="true">
-
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.widget.DrawerLayout>
-
-    <ListView
-        android:id="@+id/navList"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="left|start"
-        android:background="#ffeeeeee"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/drawer_layout"
-        android:layout_alignEnd="@+id/drawer_layout" />
+    tools:context="taylorandtanner.gasscanmk1.Settings">
 
 
-<<<<<<< HEAD
-    </RelativeLayout>
-=======
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Here are Your Settings Options!!"
-        android:id="@+id/textView"
+        android:text="SETTINGSSSSSSSSSSS
+        -visual settings (size of text, etc.)
+        -change entry method (manual/scan)
+        -add car (extra)???
+        -darkula option? (disable/enable)"
+        android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="74dp"
-        android:textSize="70dp"/>
+        android:layout_marginTop="90dp"
+        android:textSize="15dp"
+        />
 
     <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -55,16 +34,18 @@
         android:layout_above="@+id/Scan"
         android:layout_alignRight="@+id/Scan"
         android:layout_alignEnd="@+id/Scan"
-        android:layout_alignTop="@+id/button2">
+        android:layout_alignTop="@+id/button2"
+        >
 
         <ListView
+
             android:id="@+id/navList"
             android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
             android:layout_gravity="left|start"
-            android:background="#fff6f6"/>
+            android:background="#7b9b9f"
+            android:alpha="1.0"
+            android:elevation="50dp"/>
     </android.support.v4.widget.DrawerLayout>
 
-
 </RelativeLayout>
->>>>>>> 6ae71d0813e4fbc856f9574b00e6be928f8b5373
