--- a/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
@@ -9,6 +9,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="taylorandtanner.gasscanmk1.ViewLogs">
 
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Here you can view all of your previous Logs"
+        android:id="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="90dp"
+        android:textSize="70dp"/>
+
     <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -23,18 +35,9 @@
         <ListView
             android:id="@+id/navList"
             android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
             android:layout_gravity="left|start"
-            android:background="#fff6f6"/>
+            android:background="#ff9d44" />
     </android.support.v4.widget.DrawerLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Here you can view all of your previous Logs"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
-        android:textSize="70dp"/>
 </RelativeLayout>
