--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
+
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -27,30 +32,12 @@
         android:onClick="testWriteDatabase"/>
 
 
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/Scan"
-        android:layout_alignRight="@+id/Scan"
-        android:layout_alignEnd="@+id/Scan"
-        android:layout_alignTop="@+id/button2">
 
-        <ListView
-            android:id="@+id/navList"
-            android:layout_width="200dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="left|start"
-            android:background="#fff6f6"
-            android:choiceMode="singleChoice" />
-    </android.support.v4.widget.DrawerLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/mpgText"
+        android:text="100"
         android:id="@+id/mpg"
         android:editable="true"
         android:textSize="70sp"
@@ -62,13 +49,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/milesText"
+        android:text="10000"
         android:id="@+id/miles"
         android:editable="true"
         android:textSize="70sp"
-        android:layout_below="@+id/mpg"
-        android:layout_alignLeft="@+id/gallons"
-        android:layout_alignStart="@+id/gallons" />
+        android:layout_below="@+id/mpg" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -135,5 +120,27 @@
         android:id="@+id/button2"
         android:layout_alignRight="@+id/textView4"
         android:layout_alignEnd="@+id/textView4" />
+
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/Scan"
+        android:layout_alignRight="@+id/Scan"
+        android:layout_alignEnd="@+id/Scan">
+
+        <ListView
+            android:id="@+id/navList"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:layout_gravity="left|start"
+            android:background="#ff5454"
+            android:choiceMode="singleChoice"
+            android:alpha="100" />
+    </android.support.v4.widget.DrawerLayout>
+
 
 </RelativeLayout>
