--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -137,7 +137,7 @@
             android:layout_width="200dp"
             android:layout_height="250dp"
             android:layout_gravity="left|start"
-            android:background="#ff5454"
+            android:background="#e7c1c1"
             android:choiceMode="singleChoice"
             android:alpha="100" />
     </android.support.v4.widget.DrawerLayout>
