Receipt Entry: Added write to Firebase for separate users
Each user can submit multiple receipts to firebase, and pull the receipt
information back as a
ReceiptEntry.class.

TODO: implement queries to sort through receipts and then update the
main page with aggregated info instead of latest receipt info.

- Do this by using firebase commands for queries and saving (for each
user separately) the last referenced key, and the current values for the
main page - to reduce the amount of work required to pull from the
database.

--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/miles"
+        android:text="@string/mpg"
         android:id="@+id/textView5"
         android:layout_alignBaseline="@+id/mpg"
         android:layout_alignBottom="@+id/mpg"
@@ -92,7 +92,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="mpg"
+        android:text="@string/miles"
         android:id="@+id/textView6"
         android:editable="false"
         android:layout_alignBottom="@+id/miles"
