--- a/gasscanmk1/app/src/main/res/layout/activity_receipt_form.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_receipt_form.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="taylorandtanner.gasscanmk1.receiptForm">
+    tools:context=".ReceiptForm">
 
 
 
@@ -104,7 +104,8 @@
         android:id="@+id/receiptPriceText"
         android:layout_above="@+id/receiptGallons"
         android:layout_alignRight="@+id/drawer_layout"
-        android:layout_alignEnd="@+id/drawer_layout" />
+        android:layout_alignEnd="@+id/drawer_layout"
+        android:text="1" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -114,7 +115,8 @@
         android:id="@+id/receiptGallonsText"
         android:layout_alignBottom="@+id/receiptGallons"
         android:layout_alignLeft="@+id/receiptPriceText"
-        android:layout_alignStart="@+id/receiptPriceText" />
+        android:layout_alignStart="@+id/receiptPriceText"
+        android:text="2" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -124,7 +126,8 @@
         android:id="@+id/receiptPriceGalText"
         android:layout_alignBottom="@+id/receiptPriceGal"
         android:layout_alignLeft="@+id/receiptGallonsText"
-        android:layout_alignStart="@+id/receiptGallonsText" />
+        android:layout_alignStart="@+id/receiptGallonsText"
+        android:text="3" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -134,7 +137,8 @@
         android:layout_alignRight="@+id/drawer_layout"
         android:layout_alignEnd="@+id/drawer_layout"
         android:layout_toRightOf="@+id/receiptGasStation"
-        android:layout_toEndOf="@+id/receiptGasStation" />
+        android:layout_toEndOf="@+id/receiptGasStation"
+        android:editable="false" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -143,7 +147,8 @@
         android:ems="10"
         android:id="@+id/receiptMilesText"
         android:layout_alignTop="@+id/receiptMiles"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="4" />
 
     <Button
         android:layout_width="wrap_content"
@@ -156,6 +161,8 @@
         android:layout_alignEnd="@+id/receiptMilesText"
         android:layout_toRightOf="@+id/receiptGallons"
         android:layout_toEndOf="@+id/receiptGallons"
-        android:background="#9eca80" />
+        android:background="#9eca80"
+        android:clickable= "true"
+        android:onClick="pushReceipt"/>
 
 </RelativeLayout>
