--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
+<!-- commit 10/3 -->
 
 
 
@@ -37,7 +37,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="100"
+        android:text="0"
         android:id="@+id/mpg"
         android:editable="true"
         android:textSize="70sp"
@@ -49,11 +49,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10000"
+        android:text="0"
         android:id="@+id/miles"
         android:editable="true"
         android:textSize="70sp"
-        android:layout_below="@+id/mpg" />
+        android:layout_below="@+id/mpg"
+        android:layout_alignLeft="@+id/gallons"
+        android:layout_alignStart="@+id/gallons" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -80,7 +82,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/miles"
+        android:text="@string/mpg"
         android:id="@+id/textView5"
         android:layout_alignBaseline="@+id/mpg"
         android:layout_alignBottom="@+id/mpg"
@@ -92,7 +94,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="mpg"
+        android:text="@string/miles"
         android:id="@+id/textView6"
         android:editable="false"
         android:layout_alignBottom="@+id/miles"
@@ -128,9 +130,9 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/Scan"
-        android:layout_alignRight="@+id/Scan"
-        android:layout_alignEnd="@+id/Scan">
+        android:layout_alignTop="@+id/button2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ListView
             android:id="@+id/navList"
