--- a/gasscanmk1/app/src/main/res/layout/ocr_capture.xml
+++ b/gasscanmk1/app/src/main/res/layout/ocr_capture.xml
@@ -29,4 +29,58 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/forStorage"
+        android:textSize="10dp"
+        android:layout_alignBaseline="@+id/forMPG"
+        android:layout_alignBottom="@+id/forMPG"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="92dp"
+        android:layout_marginEnd="92dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/forMPG"
+        android:textSize="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/button3"
+        android:layout_toEndOf="@+id/button3"
+        android:layout_marginBottom="75dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/forNet"
+        android:textSize="10dp"
+        android:layout_below="@+id/forStorage"
+        android:layout_toRightOf="@+id/button3"
+        android:layout_toEndOf="@+id/button3" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/forQTY"
+        android:textSize="10dp"
+        android:layout_below="@+id/forNet"
+        android:layout_toRightOf="@+id/button3"
+        android:layout_toEndOf="@+id/button3" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Total"
+        android:textSize="10dp"
+        android:layout_below="@+id/forQTY"
+        android:layout_toRightOf="@+id/button3"
+        android:layout_toEndOf="@+id/button3"
+        android:text="New Text" />
+
 </RelativeLayout>
