--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/mpgText"
         android:id="@+id/mpg"
         android:editable="true"
         android:textSize="70sp"
@@ -49,7 +49,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/milesText"
         android:id="@+id/miles"
         android:editable="true"
         android:textSize="70sp"
@@ -130,9 +130,10 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignTop="@+id/button2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignBottom="@+id/Scan"
+        android:layout_toStartOf="@+id/mpg"
+        android:layout_alignRight="@+id/Scan"
+        android:layout_alignEnd="@+id/Scan">
 
         <ListView
             android:id="@+id/navList"
