--- a/gasscanmk1/app/src/main/res/layout/activity_receipt_form.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_receipt_form.xml
@@ -11,23 +11,6 @@
 
 <!-- commit 10/3 -->
 
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-
-        <ListView
-            android:id="@+id/navList"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
-            android:layout_gravity="left|start"
-            android:background="#ff9d44" />
-    </android.support.v4.widget.DrawerLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -164,5 +147,24 @@
         android:background="#9eca80"
         android:clickable= "true"
         android:onClick="pushReceipt"/>
+
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+        <ListView
+            android:id="@+id/navList"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:layout_gravity="left|start"
+            android:background="#e7c1c1" />
+    </android.support.v4.widget.DrawerLayout>
 
 </RelativeLayout>
