--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Scan Receipt"
-        android:id="@+id/Scan"
+        android:id="@+id/button2"
         android:layout_alignParentBottom="true"
         android:background="#FFC107"
         android:layout_alignParentEnd="false"
@@ -41,10 +41,12 @@
         android:id="@+id/mpg"
         android:editable="true"
         android:textSize="70sp"
-        android:layout_marginTop="32dp"
-        android:layout_below="@+id/button2"
-        android:layout_alignLeft="@+id/miles"
-        android:layout_alignStart="@+id/miles" />"/>
+        android:layout_marginTop="75dp"
+        android:layout_alignTop="@+id/drawer_layout"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="120dp"
+        android:layout_marginEnd="120dp" />"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,8 +56,8 @@
         android:editable="true"
         android:textSize="70sp"
         android:layout_below="@+id/mpg"
-        android:layout_alignLeft="@+id/gallons"
-        android:layout_alignStart="@+id/gallons" />
+        android:layout_alignLeft="@+id/mpg"
+        android:layout_alignStart="@+id/mpg" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -65,10 +67,8 @@
         android:editable="true"
         android:textSize="70sp"
         android:layout_below="@+id/miles"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2"
-        android:layout_marginRight="30dp"
-        android:layout_marginEnd="30dp" />
+        android:layout_alignLeft="@+id/miles"
+        android:layout_alignStart="@+id/miles" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -98,30 +98,10 @@
         android:id="@+id/textView6"
         android:editable="false"
         android:layout_alignBottom="@+id/miles"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button"
+
         />
 
-    <Button
-        android:textSize="25dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Test Firebase Retrieval"
-        android:id="@+id/button"
-        android:background="#64b468"
-        android:clickable="true"
-        android:onClick="testReadDatabase"
-        android:layout_above="@+id/Scan"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="31dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Test OCR"
-        android:id="@+id/button2"
-        android:layout_alignRight="@+id/textView4"
-        android:layout_alignEnd="@+id/textView4" />
 
 
     <android.support.v4.widget.DrawerLayout
@@ -130,10 +110,9 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignBottom="@+id/Scan"
         android:layout_toStartOf="@+id/mpg"
-        android:layout_alignRight="@+id/Scan"
-        android:layout_alignEnd="@+id/Scan">
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <ListView
             android:id="@+id/navList"
