Got data transfer working between activities. Receipt form populates with OCR textview fields. Need to find better way (possibly not block) to capture text. OR capture text per entry instead of all at once and parsing. TODO: fix main-menu return calculations, add protection for mileage entry (or any other entries) update ocr entry format as I mentioned above.

--- a/gasscanmk1/app/src/main/res/layout/ocr_capture.xml
+++ b/gasscanmk1/app/src/main/res/layout/ocr_capture.xml
@@ -83,4 +83,18 @@
         android:layout_toEndOf="@+id/button3"
         android:text="New Text" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm Selections"
+        android:id="@+id/acceptOCRButton"
+        android:layout_below="@+id/Total"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="31dp"
+        android:layout_marginEnd="31dp"
+        android:background="#8eb884"
+        android:clickable="true"
+        />
 </RelativeLayout>
