Changed all the 'hamburger' menus to the color #b3b3b3 for consistency. Removed any references within them to old activities. Added a placeholder activity to the 'remove totals in firebase' function that will just do nothing until funcitonality is added.

--- a/gasscanmk1/app/src/main/res/layout/activity_main.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_main.xml
@@ -119,7 +119,7 @@
             android:layout_width="200dp"
             android:layout_height="250dp"
             android:layout_gravity="left|start"
-            android:background="#e7c1c1"
+            android:background="#b3b3b3"
             android:choiceMode="singleChoice"
             android:alpha="100" />
     </android.support.v4.widget.DrawerLayout>
