--- a/gasscanmk1/app/src/main/res/layout/activity_receipt_form.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_receipt_form.xml
@@ -164,7 +164,7 @@
             android:layout_width="200dp"
             android:layout_height="250dp"
             android:layout_gravity="left|start"
-            android:background="#e7c1c1" />
+            android:background="#b3b3b3" />
     </android.support.v4.widget.DrawerLayout>
 
 </RelativeLayout>
