--- a/gasscanmk1/app/src/main/res/layout/activity_settings.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_settings.xml
@@ -31,9 +31,6 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/Scan"
-        android:layout_alignRight="@+id/Scan"
-        android:layout_alignEnd="@+id/Scan"
         android:layout_alignTop="@+id/button2"
         >
 
@@ -43,7 +40,7 @@
             android:layout_width="200dp"
             android:layout_height="250dp"
             android:layout_gravity="left|start"
-            android:background="#7b9b9f"
+            android:background="#b3b3b3"
             android:alpha="1.0"
             android:elevation="50dp"/>
     </android.support.v4.widget.DrawerLayout>
