--- a/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
@@ -290,4 +290,25 @@
         android:layout_alignLeft="@+id/button5"
         android:layout_alignStart="@+id/button5" />
 
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_toStartOf="@+id/mpg"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+        <ListView
+            android:id="@+id/navList"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:layout_gravity="left|start"
+            android:background="#b3b3b3"
+            android:choiceMode="singleChoice"
+            android:alpha="100" />
+    </android.support.v4.widget.DrawerLayout>
+
 </RelativeLayout>
