--- a/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log1"
+        android:text="9/10/16"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -23,7 +23,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log2"
+        android:text="9/13/16"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
@@ -33,7 +33,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log3"
+        android:text="10/15/16"
         android:id="@+id/textView9"
         android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
@@ -43,7 +43,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log4"
+        android:text="10/31/16"
         android:id="@+id/textView10"
         android:layout_below="@+id/textView9"
         android:layout_alignParentLeft="true"
@@ -142,7 +142,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="14050"
+        android:text="140500"
         android:id="@+id/textView20"
         android:layout_alignTop="@+id/textView19"
         android:layout_alignLeft="@+id/textView16"
@@ -180,7 +180,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="14100"
+        android:text="141000"
         android:id="@+id/textView24"
         android:layout_alignTop="@+id/textView23"
         android:layout_alignLeft="@+id/textView20"
@@ -216,7 +216,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="14200"
+        android:text="142000"
         android:id="@+id/textView28"
         android:layout_alignTop="@+id/textView27"
         android:layout_alignLeft="@+id/textView24"
@@ -290,25 +290,34 @@
         android:layout_alignLeft="@+id/button5"
         android:layout_alignStart="@+id/button5" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"
+        android:id="@+id/textView31"
+        android:layout_alignTop="@+id/textView11"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toStartOf="@+id/mpg"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+    <!--
+        <android.support.v4.widget.DrawerLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/drawer_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toStartOf="@+id/mpg"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
 
-        <ListView
-            android:id="@+id/navList"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
-            android:layout_gravity="left|start"
-            android:background="#b3b3b3"
-            android:choiceMode="singleChoice"
-            android:alpha="100" />
-    </android.support.v4.widget.DrawerLayout>
-
+            <ListView
+                android:id="@+id/navList"
+                android:layout_width="200dp"
+                android:layout_height="250dp"
+                android:layout_gravity="left|start"
+                android:background="#b3b3b3"
+                android:choiceMode="singleChoice"
+                android:alpha="100" />
+        </android.support.v4.widget.DrawerLayout>
+    -->
 </RelativeLayout>
