--- a/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
+++ b/gasscanmk1/app/src/main/res/layout/activity_view_logs.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="9/10/16"
+        android:text="11/2/16"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -23,7 +23,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="9/13/16"
+        android:text="10/28/16"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
@@ -33,7 +33,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10/15/16"
+        android:text="10/21/16"
         android:id="@+id/textView9"
         android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
@@ -43,7 +43,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10/31/16"
+        android:text="10/15/16"
         android:id="@+id/textView10"
         android:layout_below="@+id/textView9"
         android:layout_alignParentLeft="true"
@@ -59,7 +59,10 @@
         android:layout_marginStart="26dp"
         android:layout_alignTop="@+id/textView12"
         android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_toEndOf="@+id/textView"
+        android:textColor="@color/abc_background_cache_hint_selector_material_dark"
+        android:textSize="15dp"
+        android:layout_alignBottom="@+id/textView12" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -70,7 +73,9 @@
         android:layout_toRightOf="@+id/textView15"
         android:layout_toEndOf="@+id/textView15"
         android:layout_marginLeft="28dp"
-        android:layout_marginStart="28dp" />
+        android:layout_marginStart="28dp"
+        android:textColor="@color/abc_background_cache_hint_selector_material_dark"
+        android:textSize="15dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -81,7 +86,9 @@
         android:layout_toRightOf="@+id/textView12"
         android:layout_toEndOf="@+id/textView12"
         android:layout_marginLeft="27dp"
-        android:layout_marginStart="27dp" />
+        android:layout_marginStart="27dp"
+        android:textColor="@color/abc_background_cache_hint_selector_material_dark"
+        android:textSize="15dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -90,23 +97,24 @@
         android:id="@+id/textView14"
         android:layout_alignTop="@+id/textView13"
         android:layout_toRightOf="@+id/textView17"
-        android:layout_toEndOf="@+id/textView17"
         android:layout_marginLeft="26dp"
-        android:layout_marginStart="26dp" />
+        android:layout_marginStart="26dp"
+        android:textColor="@color/abc_background_cache_hint_selector_material_dark"
+        android:textSize="15dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2.30"
+        android:text="1.86"
         android:id="@+id/textView15"
-        android:layout_above="@+id/textView3"
         android:layout_alignLeft="@+id/textView11"
-        android:layout_alignStart="@+id/textView11" />
+        android:layout_alignStart="@+id/textView11"
+        android:layout_alignBottom="@+id/textView" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="140000"
+        android:text="91308"
         android:id="@+id/textView16"
         android:layout_above="@+id/textView3"
         android:layout_alignLeft="@+id/textView12"
@@ -115,7 +123,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="15.60"
+        android:text="25.96"
         android:id="@+id/textView17"
         android:layout_above="@+id/textView3"
         android:layout_alignLeft="@+id/textView13"
@@ -124,25 +132,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kroger"
+        android:text="TRADING POST"
         android:id="@+id/textView18"
         android:layout_alignTop="@+id/textView17"
-        android:layout_alignLeft="@+id/textView14"
-        android:layout_alignStart="@+id/textView14" />
+        android:layout_alignLeft="@+id/textView14" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2.00"
+        android:text="2.02"
         android:id="@+id/textView19"
         android:layout_alignTop="@+id/textView3"
         android:layout_alignLeft="@+id/textView15"
-        android:layout_alignStart="@+id/textView15" />
+        android:layout_alignStart="@+id/textView15"
+        android:layout_alignBottom="@+id/textView3" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="140500"
+        android:text="90968"
         android:id="@+id/textView20"
         android:layout_alignTop="@+id/textView19"
         android:layout_alignLeft="@+id/textView16"
@@ -151,7 +159,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="20.00"
+        android:text="26.77"
         android:id="@+id/textView21"
         android:layout_alignTop="@+id/textView20"
         android:layout_alignLeft="@+id/textView17"
@@ -160,27 +168,27 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Speedway"
+        android:text="TRADING POST"
         android:id="@+id/textView22"
         android:layout_alignTop="@+id/textView21"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignLeft="@+id/textView14"
-        android:layout_alignStart="@+id/textView14" />
+        android:layout_alignParentEnd="false"
+        android:layout_alignLeft="@+id/textView14" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2.10"
+        android:text="1.99"
         android:id="@+id/textView23"
         android:layout_alignTop="@+id/textView9"
         android:layout_alignLeft="@+id/textView19"
-        android:layout_alignStart="@+id/textView19" />
+        android:layout_alignStart="@+id/textView19"
+        android:layout_alignBottom="@+id/textView9" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="141000"
+        android:text="90620"
         android:id="@+id/textView24"
         android:layout_alignTop="@+id/textView23"
         android:layout_alignLeft="@+id/textView20"
@@ -189,7 +197,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="25.69"
+        android:text="27.30"
         android:id="@+id/textView25"
         android:layout_alignTop="@+id/textView24"
         android:layout_alignLeft="@+id/textView21"
@@ -198,25 +206,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Speedway"
+        android:text="SHELL"
         android:id="@+id/textView26"
         android:layout_alignTop="@+id/textView25"
-        android:layout_alignLeft="@+id/textView22"
-        android:layout_alignStart="@+id/textView22" />
+        android:layout_alignLeft="@+id/textView22" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3.00"
+        android:text="2.01"
         android:id="@+id/textView27"
         android:layout_alignTop="@+id/textView10"
         android:layout_alignLeft="@+id/textView23"
-        android:layout_alignStart="@+id/textView23" />
+        android:layout_alignStart="@+id/textView23"
+        android:layout_alignBottom="@+id/textView10" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="142000"
+        android:text="90250"
         android:id="@+id/textView28"
         android:layout_alignTop="@+id/textView27"
         android:layout_alignLeft="@+id/textView24"
@@ -225,7 +233,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="25.69"
+        android:text="27.76"
         android:id="@+id/textView29"
         android:layout_alignTop="@+id/textView28"
         android:layout_alignLeft="@+id/textView25"
@@ -234,22 +242,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kroger"
+        android:text="TRADING POST"
         android:id="@+id/textView30"
         android:layout_alignTop="@+id/textView29"
-        android:layout_alignLeft="@+id/textView26"
-        android:layout_alignStart="@+id/textView26" />
+        android:layout_alignLeft="@+id/textView26" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button"
         android:layout_toRightOf="@+id/textView14"
-        android:layout_toEndOf="@+id/textView14"
         android:background="#f13312"
         android:text="X"
         android:layout_alignTop="@+id/textView18"
-        android:layout_above="@+id/textView3" />
+        android:layout_above="@+id/textView3"
+        android:layout_alignRight="@+id/button4"
+        android:layout_alignEnd="@+id/button4" />
 
     <Button
         android:layout_width="wrap_content"
@@ -262,8 +270,8 @@
         android:layout_alignRight="@+id/textView22"
         android:layout_alignEnd="@+id/textView22"
         android:layout_above="@+id/textView9"
-        android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button" />
+        android:layout_toRightOf="@+id/textView14"
+        android:layout_toEndOf="@+id/textView14" />
 
     <Button
         android:layout_width="wrap_content"
@@ -274,7 +282,6 @@
         android:text="X"
         android:layout_above="@+id/textView10"
         android:layout_toRightOf="@+id/textView14"
-        android:layout_toEndOf="@+id/textView14"
         android:layout_alignTop="@+id/textView26" />
 
     <Button
@@ -284,11 +291,9 @@
         android:background="#f13312"
         android:width="2dp"
         android:text="X"
-        android:layout_toEndOf="@+id/textView26"
         android:layout_alignTop="@+id/textView30"
-        android:layout_alignBottom="@+id/textView30"
         android:layout_alignLeft="@+id/button5"
-        android:layout_alignStart="@+id/button5" />
+        android:layout_alignBottom="@+id/textView29" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -297,18 +302,21 @@
         android:id="@+id/textView31"
         android:layout_alignTop="@+id/textView11"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="@color/abc_background_cache_hint_selector_material_dark"
+        android:textSize="15dp" />
 
-    <!--
+
         <android.support.v4.widget.DrawerLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toStartOf="@+id/mpg"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true">
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/textView11"
+            android:layout_alignRight="@+id/textView31"
+            android:layout_alignEnd="@+id/textView31">
 
             <ListView
                 android:id="@+id/navList"
@@ -319,5 +327,5 @@
                 android:choiceMode="singleChoice"
                 android:alpha="100" />
         </android.support.v4.widget.DrawerLayout>
-    -->
+
 </RelativeLayout>
